# verdantdesktop

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  lib.rs  logo_track.rs  main.rs  service.rs  sine_track.rs  video_renderer.rs
src/pages/: accounts.rs  discovery.rs  login.rs  mod.rs  rooms.rs  settings.rs
src/services/: mod.rs
src/video/: mod.rs  nokhwa.rs  pipewire.rs
