[package]
name = "havendesktop"
version = "0.1.1"
edition = "2021"
publish = false

[features]
default = []
tracing = ["console-subscriber", "tokio/tracing"]

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot"] }
livekit = { version = "0.7.24", features = ["rustls-tls-native-roots"]}
webrtc-sys = "*"
futures = "0.3"
winit = { version = "0.30.11", features = [ "android-native-activity" ] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
image = "0.25.6"
wgpu = "25.0"
egui = "0.31.1"
egui-wgpu = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "wayland", "x11", "wgpu", "persistence"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
console-subscriber = { version = "0.1.10", features = ["parking_lot"], optional = true }
keycast = "0.1.3"
rand = "0.9.2"
base64 = "0.22.1"
protocol = { path = "../protocol" }
nokhwa = { version = "0.10.9", features = ["input-native"]}
async-trait = "0.1.89"
thiserror = "2.0.17"
yuv = "0.8.8"

[target.'cfg(target_os = "macos")'.dependencies]
# On macos use feature relax-sign-encoding to avoid runtime crash (https://github.com/rust-windowing/winit/pull/4302)
objc2 = { version = "0.6.0", features = ["relax-sign-encoding"] }
